# mossel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mossel/: __init__.py  __main__.py  main.py
src/test/: test1.py
src/test/.mossel/: commands.toml
