[project]
name = "mossel"
version = "0.1.0"
description = ""
authors = [
    {name = "hvbargen", email = "37015738+hvbargen@users.noreply.github.com"},
]
dependencies = [
    "typer>=0.4.0",
    "toml>=0.10.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
